data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1314.wast
;; 5.  *Test Description*: Check if a forward branch in an exported function, that resumes execution after an `end` instruction, maintains proper stack state when the block crosses module boundaries.     *Constraint Being Checked*: Ensures that the forward branch handling correctly restores the operand stack and continues proper execution flow post `end` across module boundaries.

(assert_invalid
  (module
    (func $crossing-boundary-block
      (export "crossingBoundaryBlock")
      (block $outer
        (block $inner
          (br 1) 
        )
        (end)
      )
    )
  )
  "type mismatch"
)